--- a/resources.tex
+++ b/resources.tex
@@ -63,7 +63,7 @@ I have already mentioned that An Cr\'ubad\'an \citep{scannell2007crubadan} is a 
 
 \item Wikipedia,\footnote{\href{https://www.wikipedia.org/}{https://www.wikipedia.org/}. \last{May~2}} "the largest and most popular general reference work on the Internet" \citep{wiki:Wikipedia} has a nontrivial amount of articles on low-resource languages, many of which have references themselves to scholarly work. \citet{kornai2013digital}, among others, notes that Wiki\-pedia is one of the first ports-of-call for new language communities, and while it is not a precondition for having corpora on the web, it is a {\it sine qua non} for digital vitalisation. Thus Wikipedia has two purposes; documenting the language and its community (for instance, in the Naskapi Language article\footnote{\href{https://en.wikipedia.org/wiki/Naskapi\_language}{https://en.wikipedia.org/wiki/Naskapi\_language}. \last{May~2}}), and providing a space for corpus development in the target language itself (for instance, as in the Gaelic wikipedia\footnote{\href{https://gd.wikipedia.org/wiki/G\%C3\%A0idhlig}{https://gd.wikipedia.org/wiki/G\`aidhlig}. \last{May~3}}).
 
-\item The World Atlas of Language Structures (WALS) \citep{wals} is a directory of typological features which also includes academic references for many of the over two thousand languages presented. WALS is a curated resource, largely made by a team of 55 experts, and hosted by the Max Planck Institute for Evolutionary Anthropology (the same as Glottlog, and as other resources such as PHOIBLE\footnote{\href{http://phoible.org/}{http://phoible.org/}. \last{May~2}} \citep{phoible} and DOBES\footnote{\href{http://dobes.mpi.nl/}{http://dobes.mpi.nl/}. \last{May~2}} \citep{wittenburg2003dobes} related to taking an inventory of language structures). 
+\item The World Atlas of Language Structures (WALS) \citep{wals} is a directory of typological features which also includes academic references for many of the over two thousand languages presented. WALS is a curated resource, largely made by a team of 55 experts, and hosted by the Max Planck Institute for Evolutionary Anthropology (the same as Glottlog, and as other resources such as PHOIBLE\footnote{\href{http://phoible.org/}{http://phoible.org/}. \last{May~2}} \citep{phoible} and DOBES\footnote{\href{http://dobes.mpi.nl/}{http://dobes.mpi.nl/}. \last{May~2}} \citep{wittenburg2003dobes} related to taking an inventory of language structures).
 \end{itemize}
 
 There are other resources: the CLARIN Virtual Language Observatory,\footnote{\href{https://vlo.clarin.eu}{https://vlo.clarin.eu}. \last{May~2}} the Linguistic Data Consortium at UPenn,\footnote{\href{https://www.ldc.upenn.edu/}{https://www.ldc.upenn.edu/}. \last{May~2}} the ELRA,\footnote{\href{http://catalog.elra.info/en-us/}{http://catalog.elra.info/en-us/}. \last{May~2}} META-SHARE,\footnote{\href{http://www.meta-share.org/}{http://www.meta-share.org/}. \last{May~2}} the Association for Computational Linguistics' Wiki,\footnote{\href{https://aclweb.org/aclwiki/Main_Page}{https://aclweb.org/aclwiki/Main_Page}. \last{May~2}} the NICT Universal Catalogue,\footnote{\href{https://www.nict.go.jp/index.html}{https://www.nict.go.jp/index.html}. \last{May~2}} LT World\footnote{\href{http://www.lt-world.org/}{http://www.lt-world.org/}. \last{May~2}} and so on. Providing an exhausting list would be an impossible task, as there are often collections for each specific language family or region. For instance, Afranaph\footnote{\href{http://www.africananaphora.rutgers.edu/home-mainmenu-1}{http://www.africananaphora.rutgers.edu/home-mainmenu-1}. \last{May~3}} is a database of research on African languages. More pertinently, now that it is clear what resources are, and that it is possible to at least get a basic idea of what resources there are for a given language, what resources are relevant to low resource languages?
@@ -121,13 +121,13 @@ Several authors working on LRE maps are also authors of the \citet{soria2017digi
 
 Different groups  work on different stages of language development, and each brings their own perspective, intentions, tools, and achievements. Abstractly, the groups could most easily be separated into language communities and linguists, and the fields of computational linguistics and NLP. The first group are those - often not computational linguists by training or NLP researchers - who want their own language or the language they are studying to exist digitally in some form. The initial step is generally to adopt any language script, whether  pre\"{e}xisting or ready-made for the language by linguists (for examples of this, see the Endangered Alphabets Project\footnote{\href{http://www.endangeredalphabets.com/}{http://www.endangeredalphabets.com/}. \last{May~2}}) into Unicode, a standard for consistent character representation.\footnote{\href{https://unicode.org/}{https://unicode.org/}. \last{May~2}} There are linguistic research groups that focus on this problem; for instance, the Script Encoding Initiative at Berkeley.\footnote{\href{http://linguistics.berkeley.edu/sei/index.html}{http://linguistics.berkeley.edu/sei/index.html}. \last{May~2}}
 
-Some of the people involved in this process may be computational linguists. \citet{bender2016linguistic} makes a distinction between the fields of computational linguistics and NLP: "computational linguistics is used to describe research interested in answering linguistic questions using computational methodology, while natural language processing describes research on automatic processing of human language for practical applications." It should be clear here that computational linguistics is a subfield of linguistics, and that the two are not always in sync, as for instance \citet{kay1997proper} points out when discussing improving MT processes by using informed linguists to build semi-supervised systems. \citet{bender2010grand, bender2016linguistic} go further, suggesting that understanding language typology can drastically help with multilingual NLP. 
+Some of the people involved in this process may be computational linguists. \citet{bender2016linguistic} makes a distinction between the fields of computational linguistics and NLP: "computational linguistics is used to describe research interested in answering linguistic questions using computational methodology, while natural language processing describes research on automatic processing of human language for practical applications." It should be clear here that computational linguistics is a subfield of linguistics, and that the two are not always in sync, as for instance \citet{kay1997proper} points out when discussing improving MT processes by using informed linguists to build semi-supervised systems. \citet{bender2010grand, bender2016linguistic} go further, suggesting that understanding language typology can drastically help with multilingual NLP.
 
 Meanwhile, many experts in NLP would not consider themselves computational linguists, but developers, just as many language developers would not consider themselves linguists. While navigating the field or looking at resources, it is important to keep these distinctions in mind, as they inform narratives concerning resource generation, scope, and efforts.
 
 Another hurdle which was briefly alluded to earlier was the plethora of large organisations, databases, or projects dedicated to cataloguing low resource languages. Each of these has differences in scope, funding, and incentives. However, large organisations are not the only groups working on language development, digital ascent, language revitalisation, or any other shared focus that relates to low resource languages.
 
-As \citet{hammarstrom2015unesco} points out, "language documentation and description is an extremely decentralized activity, carried out by missionaries, anthropologists, travellers, naturalists, amateurs, colonial officials, ethnographers and not least linguists over several hundred years." Language communities, amateur and professional linguists, educators, and language policy setters are most often involved in standardising a language and helping to document and revitalise low resource languages. Digitally, amateur computational linguists and coders who are first-language speakers of their respective LRLs are often the first to work on translating or migrating resources; this group is also often the first to set up wikipedias in a local language (although this often leads to enthusiastic loners working outside of the main language communities \citep{soria2017digital}). These researchers don't necessarily work only on their own languages; for instance, the Indigenous Languages and Technology email listserv\footnote{\href{http://www.u.arizona.edu/~cashcash/ILAT.html}{http://www.u.arizona.edu/~cashcash/ILAT.html}. \last{May~3}} connects hundreds of different people interested in this area of research, without focusing on a single language.
+As \citet{hammarstrom2015unesco} points out, "language documentation and description is an extremely decentralized activity, carried out by missionaries, anthropologists, travellers, naturalists, amateurs, colonial officials, ethnographers and not least linguists over several hundred years." Language communities, amateur and professional linguists, educators, and language policy setters are most often involved in standardising a language and helping to document and revitalise low resource languages. Digitally, amateur computational linguists and coders who are first-language speakers of their respective LRLs are often the first to work on translating or migrating resources; this group is also often the first to set up wikipedias in a local language (although this often leads to enthusiastic loners working outside of the main language communities \citep{soria2017digital}). These researchers don't necessarily work only on their own languages; for instance, the {\it Indigenous Languages and Technology} email listserv\footnote{\href{http://www.u.arizona.edu/~cashcash/ILAT.html}{http://www.u.arizona.edu/~cashcash/ILAT.html}. \last{May~3}} connects hundreds of different people interested in this area of research, without focusing on a single language.
 
 Beyond these groups, universities and local governments can also often develop language resources for low resource languages, as was the case with \citet{rognvaldsson2009icelandic} and with First Voices, a Canadian First Nations archiving platform.\footnote{\href{https://fv.nuxeocloud.com/}{https://fv.nuxeocloud.com/}. \last{May~3}} Non-profits are also common in the language resource development space; examples include the Endangered Language Alliance,\footnote{\href{http://elalliance.org/}{http://elalliance.org/}. \last{May~3}} Terralingua,\footnote{\href{http://terralingua.org/}{http://terralingua.org/}. \last{May~3}} the Foundation for Endangered Languages,\footnote{\href{http://www.ogmios.org/index.php}{http://www.ogmios.org/index.php}. \last{May~3}}, the Living Tongues Institute for Endangered Languages,\footnote{\href{https://livingtongues.org/}{https://livingtongues.org/}. \last{May~3}} and so on.
 
@@ -145,11 +145,11 @@ Or:
 Were it not for the special attention DARPA, one of the main sponsors of machine translation, devoted to Haitian Creole, it is dubious we would have any MT aimed at this language. There is no reason whatsoever to suppose the Haitian government would have, or even could have, sponsored a similar effort \citep{spice}. \citep[9]{kornai2013digital}
 \end{quote}
 
-The attentions of DARPA and IARPA (Intelligence Advanced Research Proj\-ects Activity, a US institution modelled after DARPA but focusing on national security and not military concerns) on low resource languages is clear, and these are only two branches of the US military-industrial complex. The Low Resource Languages for Emergent Incidents (LORELEI),\footnote{\href{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}. \last{May~3}} Machine Translation for English Retrieval of Information in Any Language (MATERIAL)\footnote{\href{https://www.iarpa.gov/index.php/research-programs/material}{https://www.iarpa.gov/index.php/research-programs/material}. \last{May~3}} and Babel\footnote{\href{https://www.iarpa.gov/index.php/research-programs/babel}{https://www.iarpa.gov/index.php/research-programs/babel}. \last{May~3}} projects explicitly mention `low resource languages` as research areas. The budget for these projects is not public, but can be safely assumed to be in the tens of millions of dollars.\footnote{\href{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}. \last{May~3}} As well, the general public can't know how these tools and projects are then utilised, and whether it is in the best interest of speakers of low resource languages. It is safe to assume that, unless the speakers are US citizens or allies, they are not, as the American military's stated goal is to ensure security for its own nationals. This means that any work done by these bodies, and by researchers connected to them, can be seen as controversial. 
+The attentions of DARPA and IARPA (Intelligence Advanced Research Proj\-ects Activity, a US institution modelled after DARPA but focusing on national security and not military concerns) on low resource languages is clear, and these are only two branches of the US military-industrial complex. The Low Resource Languages for Emergent Incidents (LORELEI),\footnote{\href{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}. \last{May~3}} Machine Translation for English Retrieval of Information in Any Language (MATERIAL)\footnote{\href{https://www.iarpa.gov/index.php/research-programs/material}{https://www.iarpa.gov/index.php/research-programs/material}. \last{May~3}} and Babel\footnote{\href{https://www.iarpa.gov/index.php/research-programs/babel}{https://www.iarpa.gov/index.php/research-programs/babel}. \last{May~3}} projects explicitly mention `low resource languages` as research areas. The budget for these projects is not public, but can be safely assumed to be in the tens of millions of dollars.\footnote{\href{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}. \last{May~3}} As well, the general public can't know how these tools and projects are then utilised, and whether it is in the best interest of speakers of low resource languages. It is safe to assume that, unless the speakers are US citizens or allies, they are not, as the American military's stated goal is to ensure security for its own nationals. This means that any work done by these bodies, and by researchers connected to them, can be seen as controversial.
 
 Another good example of where funding and incentives for language development can be controversial would be Ethnologue, which rate limits and has a paywall guarding usage of their database, even though they are widely recognised as one of the best informed databases for language data. This paywall can be triggered by viewing a non-trivial amount of pages (around five) for languages on the site. While this is philosophically no different than asking researchers to buy \citet{lewis2009ethnologue}, this data is the most widely used, and this paywall was only implemented in late 2015.\footnote{\href{https://www.ethnologue.com/ethnoblog/m-paul-lewis/ethnologue-launches-subscription-service\#.VmA0hspth0o}{https://www.ethnologue.com/ethnoblog/m-paul-lewis/ethnologue-launches-subscription-service\#.VmA0hspth0o}. \last{May~3}}
 
-SIL International is also the standardising body in charge of the ISO 639-3 standard, which is the most widely used language code. By having a paywall on their data, they exclude the general public from having control of codes for their own languages. SIL has also come under criticism for their Christian missionary work, as it can be viewed as complicit in culture change, and by extrapolation, ethnocide \citep{dobrin2009sil, dobrin2009practical, everett2009don}. This is just one example - and most likely one of the most extreme, not counting military work on languages used by insurgents in wars (implied above) - of how organisations working on language resources may influence the work itself. 
+SIL International is also the standardising body in charge of the ISO 639-3 standard, which is the most widely used language code. By having a paywall on their data, they exclude the general public from having control of codes for their own languages. SIL has also come under criticism for their Christian missionary work, as it can be viewed as complicit in culture change, and by extrapolation, ethnocide \citep{dobrin2009sil, dobrin2009practical, everett2009don}. This is just one example - and most likely one of the most extreme, not counting military work on languages used by insurgents in wars (implied above) - of how organisations working on language resources may influence the work itself.
 
 The funding of language resource development matters, because the way that the language community approaches language development affects the chance of survival for the language. This is one of the reasons that \citet{grenoble2016response} pointed out that `language vitality' is a more politically correct term to use than `language endangerment', as it takes the focus away from loss and focuses attention on language ascent. Another reason that language funding matters is because the major players with funding will generally be able to out manoeuvre smaller groups with different resources. This can enforce language shift, and can render resources created by individual developers moot. For instance, the secwepemc-facebook\footnote{\href{https://github.com/kscanne/secwepemc-facebook}{https://github.com/kscanne/secwepemc-facebook}. \last{May~2}} tool developed to automatically translate Facebook into low resource languages, created by the late Neskie Manuel for his native Secwepemcts\'in, is no longer an active project and has not been updated, rendering it obsolete with Facebook UI changes, while automatic translation is provided for high resource languages natively by Facebook. Scannell, who helped port the secwepemc-facebook tool to Greasemonkey\footnote{\href{https://www.greasespot.net/}{https://www.greasespot.net/}. \last{May~3}} for use on Mozilla Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/}. \last{May~3}} was one of the authors of \citet{streiter2006implementing}, which suggested that developers for low resource languages use open source software pools in order to pool resources to enable them to overcome this - among other - issues facing low resource languages in particular.
 
