--- a/references.bib
+++ b/references.bib
@@ -7,6 +7,15 @@
   note={Last accessed April~24, 2018.}
 }
 
+@inproceedings{bird2014aikuma,
+  title={Aikuma: A mobile app for collaborative language documentation},
+  author={Bird, Steven and Hanke, Florian R and Adams, Oliver and Lee, Haejoong},
+  booktitle={Proceedings of the 2014 Workshop on the Use of Computational Methods in the Study of Endangered Languages},
+  pages={1--5},
+  year={2014}
+}
+
+
 @article{google2016google,
   title = {Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation},
   author  = {Yonghui Wu and Mike Schuster and Zhifeng Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and Maxim Krikun and Yuan Cao and Qin Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and Melvin Johnson and Xiaobing Liu and Łukasz Kaiser and Stephan Gouws and Yoshikiyo Kato and Taku Kudo and Hideto Kazawa and Keith Stevens and George Kurian and Nishant Patil and Wei Wang and Cliff Young and Jason Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and Greg Corrado and Macduff Hughes and Jeffrey Dean},
