--- a/resources.tex
+++ b/resources.tex
@@ -14,7 +14,7 @@ While an exposition of all possible natural language processing tools is beyond 
 
 All language resources ultimately depend upon corpora; without data, an algorithm does nothing. And yet not all corpora is the same, either. Data which has been cleaned - often using intensive manual effort and specific tooling - is far more efficient than generic buckets of sound clippings or text, although there are uses for both. Annotated corpora is more useful for specific tools, such as syntactic parsers or for morphological analysers. The type of annotation matters; for instance, interlinear glossed text (IGT) is an industry standard for displaying corpora in academic linguistics by displaying the original datum, a morphosyntactic gloss, and a translation. This is particularly useful for developers of morphological analysers and parsers, who are keen to interpret typological features of a language into their system.
 
-Historically, the majority of corpora has been written corpora, due to the difficulty gathering, cleaning, and sorting large amounts of audio or video files. With the rapid escalation of computing power (mirrored and predicted by Moore's law \citep{schaller1997moore}, which observes that circuit board complexity doubles roughly every two years), and with the advent of large social media sites that allow users to upload their own language data (such as YouTube\footnote{\href{https://www.youtube.com/}{https://www.youtube.com/}. \last{May~2}}), audio and visual corpora are becoming more and more prevalent. Both types of corpora are relevant for LRLs; the former is useful for setting up fonts and characters and implementing them in Unicode, for spell checkers, and so on; while the latter can also be used to begin extracting phonemes \citep{kempton2014discovering, muller2017improving}, or for speech-to-text systems \citep{fraga2015active, fraga2015improving}, among other uses \citep{adams2017automatic}. (Indeed, the proceedings of the workshop on Spoken Language Technologies for Under-resourced languages (SLTU), now in its sixth incarnation, show that using audio corpora to bootstrap language models is an active topic of research.\footnote{\href{http://www.mica.edu.vn/sltu2018/}{http://www.mica.edu.vn/sltu2018/}. \last{May~2}})
+Historically, the majority of corpora has been written corpora, due to the difficulty gathering, cleaning, and sorting large amounts of audio or video files. With the rapid escalation of computing power (mirrored and predicted by Moore's law \citep{schaller1997moore}, which observes that circuit board complexity doubles roughly every two years), and with the advent of large social media sites that allow users to upload their own language data (such as YouTube\footnote{\href{https://www.youtube.com/}{https://www.youtube.com/}. \last{May~2}}), audio and visual corpora are becoming more and more prevalent. Both types of corpora are relevant for LRLs; the former is useful for setting up fonts and characters and implementing them in Unicode, for spell checkers, and so on; while the latter can also be used to begin extracting phonemes \citep{kempton2014discovering, muller2017improving}, or for speech-to-text systems \citep{fraga2015active, fraga2015improving}, among other uses \citep{adams2017automatic}. Indeed, the proceedings of the workshop on Spoken Language Technologies for Under-resourced languages (SLTU), now in its sixth incarnation, show that using audio corpora to bootstrap language models is an active topic.\footnote{\href{http://www.mica.edu.vn/sltu2018/}{http://www.mica.edu.vn/sltu2018/}. \last{May~2}} The possibility of automatically extracting linguistic information from audio recordings has enabled field linguists to focus on recording data now, as well, instead of laboriously spending years transcribing a single language \citep{bird2014aikuma}.
 
 There are other types of corpora. For instance, a bilingual or multilingual corpus is increasingly useful for NLP work on LRLs. By comparing aligned or identical translated texts from a source language, one can deduct systemic knowledge of the target language. When this is combined with typological features, one can swiftly build not just machine translators \citep{lewis2010haitian} but also grammars \citep{bender2016linguistic}. Even basic word lists can be useful in some instances; for instance, the Swadesh list of forty-odd words which are shown to be less likely to change over time \citep{swadesh1955towards} has been incredibly useful for showing language relationships and diachronic change. Another type of corpus would be photos of hand-written material or of particular font faces, for use in optical character recognition, where a knowledge of the alphabet or written resources can be used to develop digitised corpora. On a deeper level, wordnets (which track semantic relationships between various words), thesauri, and other semantically-enriched corpora can also be useful for research and language development.
 
