Mention open science movements
Close #10

--- a/methods.tex
+++ b/methods.tex
@@ -23,6 +23,8 @@ For this reason, I have always licensed my own code under the MIT license, which
 
 It is worth noting that work published without a license on a public site is not technically open source. When software is not licensed, it by default reverts (in the US legal jurisdiction, anyway) to copyright where {\it all rights are reserved}, which is by definition not FLOSS. For this reason, it is important to add a license to code if it is in your purview to do so, and if you wish to follow the open source methodology.
 
+For linguists in academia, it is also worth remembering that the linguistic science is part of a wider field of researchers that work on similar tools. Sites and groups dedicated towards open access and open research can apply to linguistic work, as well. Looking for guides on OpenAire,\footnote{\href{https://www.openaire.eu/}{https://www.openaire.eu/}. \last{May~3}} the Open Knowledge Foundation,\footnote{\href{https://okfn.org/}{https://okfn.org/}. \last{May~3}} ROpenSci,\footnote{\href{http://ropensci.org/}{http://ropensci.org/}. \last{May~3}} AltMetrics,\footnote{\href{https://www.altmetric.com/}{https://www.altmetric.com/}. \last{May~3}} the Open Science Framework,\footnote{\href{https://osf.io/}{https://osf.io/}. \last{May~3}} and others may be helpful for planning research methodologies from an open perspective.
+
 \subsection{Choosing repositories}
 \label{choosing-repositories}
 
